# OS-course

./: .gitignore
Client-server/: CMakeLists.txt  client.cpp  db.txt  receive_tokenizer.cpp  receive_tokenizer.h  scoped_socket.cpp  scoped_socket.h  server.cpp  utils.cpp  utils.h
Grep/: CMakeLists.txt  autoclosable.h  grep.cpp  path.h  run_tests  str_searcher.h  utils.h
Grep/tests/main/: link
Grep/tests/main/A/1/: without_word
Grep/tests/main/A/1/A/: with_wo)rd
Grep/tests/res/: ans1  ans3
JIT-function/: CMakeLists.txt  compiler.cpp  jit_function.h  memory_handler.h
Libs/: CMakeLists.txt  Makefile  compile_all  main.cpp
Libs/dynamic_lib/: Makefile  sum.cpp  sum.h
Libs/loadable_lib/: Makefile  sub.cpp  sub.h
Libs/static_lib/: Makefile  mul.cpp  mul.h
Multiplexing/: CMakeLists.txt  buffered_socket.cpp  buffered_socket.h  client.h  main.cpp  scoped_epoll.cpp  scoped_socket.h  utils.cpp
Pipe/: CMakeLists.txt  client.cpp  client.h  main.cpp  pipe.cpp  pipe.h  server.cpp  server.h  unix_socket.cpp  unix_socket.h  utils.cpp  utils.h
Shell/: CMakeLists.txt  shell.cpp
multiplexing/: client.cpp  scoped_epoll.h  scoped_socket.cpp  server.cpp  server.h  utils.h
